welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
	var hauteur: Int = getMondeHauteur();
	var largeur: Int = getMondeLargeur();
	var res = new Array[Color] (hauteur);

	def lireColonne(){
		var n: Int = 0;
		for(n <- 1 to hauteur){
			res(n-1) = getCouleurSol();
			if(!estFaceMur){
			avance();
			}
		}
	gauche();
	avance();
	droite();
	}

	def courir(nbPas: Int){
		var n: Int = 0;
		for(n <- 1 to nbPas){
			avance();
		}
	}

	def interpreterMess():Int {
		var mess: String = litMessage();
		
		if(mess == "1"){
			return 1;
		}
		else if(mess == "2"){
			return 2;
		}
		else if(mess == "3"){
			return 3;
		}
		else if(mess == "4"){
			return 4;
		}
		else if(mess == "5"){
			return 5;
		}
		else if(mess == "6"){
			return 6;
		}
		else if(mess == "7"){
			return 7;
		}
		else{
			return 8;
		}
	}
	
	def faireColonne(){
		var n: Int = 0;
		retourne();
		courir(getY() - 1);
		retourne();
		var pos: Int = 0;
		var mess: Int = interpreterMess();
		courir()(hauteur - mess);
		for(n<- 1 to hauteur){
			setCouleurBrosse(res(n-1));
			baisseBrosse();
			leveBrosse();
			if(estFaceMur){
				retourne();
				courir(hauteur - 1);
				retourne();
			}
			else{
				avance();
			}
	}
	}

	def faireParcour(){
		var n:Int = 0;
		lireColonne();
		for(n<- 1 to largeur - 1){
			faireColonne();
		}
		
		
	}
	faireParcour();
}
